# struct2token

./: ARCHITECTURE.md  CLAUDE.md  LOG.md  README.md  pyproject.toml
configs/: data.yaml  default.yaml  model.yaml  training.yaml
results/: benchmark_step30k.json
scripts/: benchmark.py  evaluate.py  prepare_benchmark_data.py  preprocess_data.py  train_tokenizer.py
src/struct2token/: __init__.py  config.py
src/struct2token/benchmark/: baselines.py  datasets.py
src/struct2token/data/: collate.py  dataset.py  mmcif_parser.py  molecule_conventions.py  tokens.py
src/struct2token/inference/: decode.py  encode.py  metrics.py
src/struct2token/losses/: inter_atom_distance.py  permutation.py  rmsd.py  tm.py
src/struct2token/model/: attention.py  cfm.py  dae.py  dit.py  embeddings.py  fsq.py  rotary.py
src/struct2token/training/: augmentation.py  ema.py  trainer.py
tests/: test_data.py  test_losses.py  test_model.py
